<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">DiAsUI</string>
    <string name="app_name">DiAsUI</string>
    <string-array name="totalinsulinarray"><item>1 hour</item><item>2 hours</item><item>3 hours</item><item>4 hours</item><item>6 hours</item><item>8 hours</item><item>12 hours</item><item>18 hours</item><item>24 hours</item></string-array>
    <string-array name="table_array">
        <item>Requested</item>
        <item>Delivered</item>
    </string-array>
    
    <string-array name="temporary_basal_rate_percentages">
        <item>0 %</item>
        <item>10 %</item>
        <item>20 %</item>
        <item>30 %</item>
        <item>40 %</item>
        <item>50 %</item>
        <item>60 %</item>
        <item>70 %</item>
        <item>80 %</item>
        <item>90 %</item>
        <item>100 %</item>
        <item>110 %</item>
        <item>120 %</item>
        <item>130 %</item>
        <item>140 %</item>
        <item>150 %</item>
        <item>160 %</item>
        <item>170 %</item>
        <item>180 %</item>
        <item>190 %</item>
        <item>200 %</item>
	</string-array>
	
    <string-array name="temporary_basal_rate_duration_minutes">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
        <item>2.5 hours</item>
        <item>3 hours</item>
        <item>3.5 hours</item>
        <item>4 hours</item>
        <item>4.5 hours</item>
        <item>5 hours</item>
        <item>5.5 hours</item>
        <item>6 hours</item>
        <item>6.5 hours</item>
        <item>7 hours</item>
        <item>7.5 hours</item>
        <item>8 hours</item>
        <item>8.5 hours</item>
        <item>9 hours</item>
        <item>9.5 hours</item>
        <item>10 hours</item>
        <item>10.5 hours</item>
        <item>11 hours</item>
        <item>11.5 hours</item>
        <item>12 hours</item>
        <item>12.5 hours</item>
        <item>13 hours</item>
        <item>13.5 hours</item>
        <item>14 hours</item>
        <item>14.5 hours</item>
        <item>15 hours</item>
        <item>15.5 hours</item>
        <item>16 hours</item>
        <item>16.5 hours</item>
        <item>17 hours</item>
        <item>17.5 hours</item>
        <item>18 hours</item>
        <item>18.5 hours</item>
        <item>19 hours</item>
        <item>19.5 hours</item>
        <item>20 hours</item>
        <item>20.5 hours</item>
        <item>21 hours</item>
        <item>21.5 hours</item>
        <item>22 hours</item>
        <item>22.5 hours</item>
        <item>23 hours</item>
        <item>23.5 hours</item>
        <item>24 hours</item>
     </string-array>
    
    <string name="mg_dl">mg/dl</string>
    <string name="_no_cgm">---</string>
    <string name="_no_time">----</string>
    
    <string name="AIT_prompt">Active Insulin Time</string>

    <string-array name="AIT_array">
        <item>2 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>8 hours</item>
    </string-array>
    <string-array name="CF">
        <item>Correction Factor Profile</item>
        <item>Enter CF</item>
        <item>mg/dl/U</item>
        <item>Enter a correction factor in the range of 10 to 200 mg/dl/U</item>
        <item>CF</item>
    </string-array>
    <string-array name="CR">
        <item>Carbohydrate to Insulin Ratio Profile</item>
        <item>Enter CR</item>
        <item>g/U</item>
        <item>Enter a carbohydrate to insulin ratio in the range of 1 to 100 g/U</item>
        <item>CR</item>
    </string-array>
    <string-array name="Basal">
        <item>Basal Rate Profile</item>
        <item>Enter Basal</item>
        <item>U/hr</item>
        <item>Enter a basal rate in the range of 0 to 5 U/hour</item>
        <item>Basal</item>
    </string-array>
    <string-array name="USSBRM">
        <item>Night Profile</item>
        <item>Enter the appropriate time regions</item>
        <item>Start Time</item>
        <item>End Time</item>
    </string-array>

    <string name="availablemodes">Available\nModes</string>
    <string name="none">None</string>
    <string name="sensoronly">Sensor\nOnly</string>
    <string name="openloop">Open\nLoop</string>
    <string name="closedloop">Closed\nLoop</string>
    <string name="ussbrm">USS\nBRM</string>
    <string name="completeconfiguration">Complete configuration tabs to unlock modes</string>
    <string name="titleInfo">Subject Info</string>
    <string name="titleInsulin">Insulin Profiles</string>
    <string name="titleDevices">Device Manager</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_di_as_setup">DiAsSetup</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_di_as_setup1">DiAsSetup1</string>

    <!-- Main screen -->
    <string name="avail_list">Available Drivers</string>
    <string name="connect_list">Connected Drivers</string>
    
    <!-- Options Menu -->
    <string name="cycle_time">Cycle Time</string>
    
</resources>
