<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        app:context=".DiAsSetup" >

        <FrameLayout
            android:id="@+id/fragmentFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8" />
    </android.support.v4.view.ViewPager>

    <TextView
        android:id="@+id/textInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/completeconfiguration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:weightSum="7" 
        android:visibility="gone">

        <TextView
            android:id="@+id/textAvailableModes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/availablemodes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lightNone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:background="@drawable/redsquare32"
            android:gravity="center"
            android:text="@string/none"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lightSensorOnly"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:background="@drawable/yellowsquare32"
            android:gravity="center"
            android:text="@string/sensoronly"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lightOpenLoop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:background="@drawable/bluesquare32"
            android:gravity="center"
            android:text="@string/openloop"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lightClosedLoop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:background="@drawable/greensquare32"
            android:gravity="center"
            android:text="@string/closedloop"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lightUSSBRM"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:background="@drawable/safetysquare32"
            android:gravity="center"
            android:text="@string/ussbrm"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.9" />

        <Button
            android:id="@+id/buttonFinish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/android_generic_button"
            android:onClick="finishClick"
            android:text="Finish"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/availablemodes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/availableModeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="None" />

        </LinearLayout>

        <Button
            android:id="@+id/Button01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/android_generic_button"
            android:onClick="finishClick"
            android:text="Finish"
            android:textColor="#000000" />

    </LinearLayout>

</LinearLayout>